blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Adoption_Plan__c/Adoption_Plan__c.object-meta.xml
<CustomObject>
    <description>The work of getting a sales-assisted customer to real use after they pay. Owned by customer success, separate from the sales deal. Self-serve customers do not get one.</description>
    <label>Adoption plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adoption plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>