blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Adoption_Plan__c/fields/Success_criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_criteria__c</fullName>
    <description>What good use looks like for this customer, in numbers the product can measure.</description>
    <label>Success criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>