blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Adoption_Plan__c/fields/Target_activation_date__c.field-meta.xml
<CustomField>
    <fullName>Target_activation_date__c</fullName>
    <description>The date by which the workspace should have reached the activation milestone.</description>
    <label>Target activation date</label>
    <type>Date</type>
</CustomField>