blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Adoption_Plan__c/fields/Workspace__c.field-meta.xml
<CustomField>
    <fullName>Workspace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks post-sale adoption for each workspace.</description>
    <label>Workspace</label>
    <referenceTo>Workspace__c</referenceTo>
    <relationshipLabel>Adoption plans</relationshipLabel>
    <relationshipName>Adoption_plans</relationshipName>
    <type>Lookup</type>
</CustomField>