blueprints/b2b-saas-product-led/salesforce/force-app/main/default/objects/Adoption_Plan__c/listViews/Adoption_in_flight.listView-meta.xml
<ListView>
    <fullName>Adoption_in_flight</fullName>
    <columns>NAME</columns>
    <columns>Target_activation_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Adoption in flight</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>